--- a/governance.html
+++ b/governance.html
@@ -23,7 +23,7 @@ LOS ANGELES, CA 90019</p>
   <div><div class="small"><strong>Mission:</strong><br>We provide financial and social assistance to the homeless through the reclaiming and re‑purposing of degraded land in America.</div></div>
   <div><div class="small"><strong>Address:</strong><br>936 CRENSHAW BLVD STE 200A
 LOS ANGELES, CA 90019<br>
-    <strong>Email:</strong> <a href="mailto:contatc@lossangeles.site">contatc@lossangeles.site</a><br><strong>Phone:</strong> <a href="tel:+12678998305">+12678998305</a></div></div>
+    <strong>Email:</strong> <a href="mailto:contact@lossangeles.site">contact@lossangeles.site</a><br><strong>Phone:</strong> <a href="tel:+12678998305">+12678998305</a></div></div>
 </div></footer>
 <script>
   const b=document.querySelector('.menu-toggle'), l=document.querySelector('.links');
