--- a/programs.html
+++ b/programs.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang='en'><head><meta charset='utf-8'/><meta name='viewport' content='width=device-width,initial-scale=1'/><title>Programs — LOS ANGELES JAZZ CHORALE</title><link rel='stylesheet' href='assets/styles.css'/><link rel='icon' href='images/logo.png'>
   <meta name="data-ein" content="851951497">
   <meta name="data-name" content="LOS ANGELES JAZZ CHORALE">
-  <meta name="data-email" content="contatc@lossangeles.site">
+  <meta name="data-email" content="contact@lossangeles.site">
   <meta name="data-phone" content="+12678998305">
   <meta name="data-address" content="936 CRENSHAW BLVD STE 200A
 LOS ANGELES, CA 90019">
@@ -46,7 +46,7 @@ LOS ANGELES, CA 90019">
   <div><div class="small"><strong>Mission:</strong><br>We provide financial and social assistance to the homeless through the reclaiming and re‑purposing of degraded land in America.</div></div>
   <div><div class="small"><strong>Address:</strong><br>936 CRENSHAW BLVD STE 200A
 LOS ANGELES, CA 90019<br>
-    <strong>Email:</strong> <a href="mailto:contatc@lossangeles.site">contatc@lossangeles.site</a><br><strong>Phone:</strong> <a href="tel:+12678998305">+12678998305</a></div></div>
+    <strong>Email:</strong> <a href="mailto:contact@lossangeles.site">contact@lossangeles.site</a><br><strong>Phone:</strong> <a href="tel:+12678998305">+12678998305</a></div></div>
 </div></footer>
 <script>
   const b=document.querySelector('.menu-toggle'), l=document.querySelector('.links');
